compiler/stage/1/err.txt
abc.c: In function ‘main’:
abc.c:6:1: error: expected ‘;’ before ‘}’ token
 }
 ^
